# lightning-kfold

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  llms.txt  pyproject.toml  sr.yaml  teasr.toml
.github/workflows/: ci.yml  release.yml
skills/lightning-kfold/: SKILL.md
src/lightning_kfold/: __init__.py  datamodule.py  ensemble.py  trainer.py
